--- a/.example.env
+++ b/.example.env
@@ -5,3 +5,8 @@ JUDGE_CHANNEL=123
 PING_ROLE=123
 LEADERBOARD_MESSAGE=123
 LEADERBOARD_CHANNEL=123
+MINIO_ACCESS=USER_NAME
+MINIO_SECRET=SECRET
+MINIO_ENDPOINT=storage.example.com
+MINIO_BUCKET=example-bucket
+MINIO_URL=https://cdn.example.com/
