Make event-name configurable

--- a/.example.env
+++ b/.example.env
@@ -10,3 +10,5 @@ MINIO_SECRET=SECRET
 MINIO_ENDPOINT=storage.example.com
 MINIO_BUCKET=example-bucket
 MINIO_URL=https://cdn.example.com/
+EVENT_NAME="Example Event"
+EVENT_IMG=https://example.com/img.png
