Update env template
Signed-off-by: Michael "Mischa Alexandrowitsch" Reimchen <hi@mic-r.eu>

--- a/.example.env
+++ b/.example.env
@@ -1,14 +1,14 @@
-BOT_TOKEN=TOKEN
-DATABASE_URL=prisma://...
-SUBMISSION_CHANNEL=123
-JUDGE_CHANNEL=123
-PING_ROLE=123
-LEADERBOARD_MESSAGE=123
-LEADERBOARD_CHANNEL=123
-MINIO_ACCESS=USER_NAME
-MINIO_SECRET=SECRET
-MINIO_ENDPOINT=storage.example.com
-MINIO_BUCKET=example-bucket
-MINIO_URL=https://cdn.example.com/
-EVENT_NAME="Example Event"
-EVENT_IMG=https://example.com/img.png
+BOT_TOKEN=
+DATABASE_URL="postgresql://user:password@host.com:5432/database"
+SUBMISSION_CHANNEL=
+JUDGE_CHANNEL=
+PING_ROLE=
+LEADERBOARD_MESSAGE=
+LEADERBOARD_CHANNEL=
+AZURE_STORAGE_CONNECTION_STRING=""
+CDN_URL="https://domain.com"
+CONTAINER_NAME=""
+EVENT_NAME=""
+EVENT_IMG="https://domain.com/logo.gif"
+GUILD_ID=""
+PORT=6969
