--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,20 +1,21 @@
-name: Docker Image CI
-
+name: Build and publish a Docker image to ghcr.io
 on:
+  release:
+    types: [ published ]
+
+  # publish on pushes to the main branch (image tagged as "latest")
   push:
-    branches: [ "DiscordJS" ]
-  pull_request:
     branches: [ "DiscordJS" ]
 
 jobs:
-
-  build:
-
-    runs-on: ubuntu-latest
+  docker_publish:
+    runs-on: "ubuntu-20.04"
 
     steps:
-    - name: push-to-ghcr
-      uses: macbre/push-to-ghcr@v12
-      with:
-        image_name: "Mic-R/BTEG-EventBot"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      
+      - name: Build and publish a Docker image for ${{ github.repository }}
+        uses: macbre/push-to-ghcr@master
+        with:
+          image_name: ${{ github.repository }}  # it will be lowercased internally
+          github_token: ${{ secrets.GITHUB_TOKEN }}
