--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: '3'
+version: "3"
 services:
-
   bot:
     image: ghcr.io/bte-germany/eventbot:latest
     depends_on:
@@ -8,7 +7,7 @@ services:
     ports:
       - "6969:6969"
     env_file:
-    - .env
+      - .env
     environment:
       - DATABASE_URL=postgresql://prisma:prisma@postgres:5432/db
     links:
@@ -21,22 +20,21 @@ services:
       - POSTGRES_USER=prisma
       - POSTGRES_PASSWORD=prisma
       - POSTGRES_MULTIPLE_DATABASES=db,nocodb
-    volumes: 
+    volumes:
       - event-bot-db:/var/lib/postgresql/data
       - ./PostgreSQL:/docker-entrypoint-initdb.d
-  
+
   NoCoDB:
     image: nocodb/nocodb:latest
     depends_on:
       - postgres
-    volumes: 
+    volumes:
       - event-nocodb:/usr/app/data/
     ports:
-      -  6970:8080
+      - 6970:8080
     environment:
       - NC_DB=pg://postgres:5432?u=prisma&p=prisma&d=nocodb
       - NC_AUTH_JWT_SECRET=XkDXpPjr3scXVNRM4BhYfR8aTF6htLNcZD9NKJqWKvJrj27rgp8huinsxGezeWXsdHgwQ6Eydiuna9SzS5kAVcKA2xhuu4ndpKBFK7pGQQ3eT8WYbQifqteEUCqnze3M
-
 
 volumes:
   event-bot-db:
