--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "2.8.7"
   }
 }
